Fix checkbox spacing

--- a/src/components/panels/signUpPanel.css
+++ b/src/components/panels/signUpPanel.css
@@ -32,6 +32,11 @@
   color: var(--colorGray4);
 }
 
+.tos label,
+.tos input {
+  float: left;
+}
+
 .input,
 .button {
   width: 100%;
